# dbg-playground

./: .gitignore  CMakeLists.txt  README.md  drainagebasin.cc  drainagebasin.hh  flowline.cc  generate_dem.py  pism_db.py  plot.py  process.py  setup.py  system.cc
doc/: method.tex  references.bib
par/: CMakeLists.txt  Makefile  foobar.c
python/: Makefile  basins.pyx  basins_c.pxd  benchmark.py  cfoo.c  cfoo.h  cfoo.pxd  dbg.pyx  dbg_c.pxd  dbgenerator.c  foo.pyx  setup.py  test.py  test2.py  test_2.py
python/par/: foobar.h  foobar.pyx  foobar_c.c  foobar_c.pxd  setup.py
src/: Array2D.hh  DEM.cc  DEM.hh  IO.cc  accumulated_flow.cc  basins.cc  basins.hh  basins_py.pyx  dbg.hh  drainagebasin.cc  drainagebasin.hh  flowline.cc  init.cc  init_mask.cc  input.cc  pnpoly.cc  setup.py  streamline.cc  system.cc
src/dem/: DEM.cc  DEM.hh
src/io/: IO.cc
util/: chugach.py  convert_nsidc_greenland_dem.py  generate_dummy_dem.py  rasterize.py
